<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        style="@style/Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="6dp">

            <TextView
                android:id="@+id/widget_title"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                tools:ignore="RelativeOverlap"
                tools:text="Title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/widget_preview"
                    style="@style/WorkoutPixelPreview"
                    android:layout_marginTop="4dp"
                    android:background="#7b1fa2" />
            </LinearLayout>

            <GridLayout
                android:id="@+id/grid_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/widget_title"
                android:columnCount="4"
                android:paddingTop="4dp">

                <ImageView
                    style="@style/Icon.Narrow"
                    android:src="@drawable/icon_date"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/widget_interval"
                    style="@style/GridText"
                    tools:text="Every 2 days" />

                <ImageView
                    android:id="@+id/widget_edit"
                    style="@style/Icon.Narrow"
                    android:layout_width="30dp"
                    android:src="@drawable/icon_edit"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/widget_edit_text"
                    style="@style/GridText"
                    android:text="@string/edit_widget" />

                <ImageView
                    style="@style/Icon.Wide"
                    android:src="@drawable/icon_done"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/widget_last_workout"
                    style="@style/GridText"
                    tools:text="Last Workout" />

                <ImageView
                    android:id="@+id/widget_past_workouts"
                    style="@style/Icon.Wide"
                    android:src="@drawable/icon_list"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/widget_past_workout_text"
                    style="@style/GridText"
                    android:text="@string/view_clicks" />

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/connect_info"
                android:layout_below="@id/grid_layout"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_corner_info"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_info"
                    tools:ignore="ContentDescription"
                    android:layout_weight="0"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingHorizontal="6dp"
                    android:text="@string/connect_widget_main_activity"
                    android:layout_weight="1"
                    />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/delete_goal"
                    android:src="@drawable/icon_delete"
                    android:layout_weight="0"
                    />

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
